phtoto width changed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table cellspacing="30">
         <tr>
-            <td> <img src ="mithil.jpg" width ="150" height = "150" alt = "my photo"></td>
+            <td> <img src ="mithil.jpg" width ="200" height = "200" alt = "my photo"></td>
             <td><h1><b>MITHIL PRANAV R.S</b></h1>
                 <h4>STUDENT AT:</h4>
                 <ol start = "1">
@@ -20,7 +20,7 @@
    
     
     <br>
-    <p><font size ="3">HI I am MITHIL PRANAV R.S from MURUNGAPALAIYAM THIRUPPUR .I am a very optimistic person and i can code very well i am a natural coder</font></p>
+    <p><font size ="4">HI I am MITHIL PRANAV R.S from MURUNGAPALAIYAM THIRUPPUR .I am a very optimistic person and a tech enthusiast</font></p>
     <p>LINK TO :</p>
 <hr size = "5" noshade>
     <h3>SOCIAL MEDIA ACCOUNTS</h3>
