--- a/mithil.html
+++ b/mithil.html
@@ -20,7 +20,7 @@
    
     
     <br>
-    <p><font size ="3">HI I am MITHIL PRANAV R.S from MURUNGAPALAIYAM THIRUPPUR .I am a very optimistic person and i can code very well i am a natural coder</font></p>
+    <p><font size ="3">HI I am MITHIL PRANAV R.S from MURUNGAPALAIYAM THIRUPPUR .I am a very optimist and i am a tech enthusiast</font></p>
     <p>LINK TO :</p>
 <hr size = "5" noshade>
     <h3>SOCIAL MEDIA ACCOUNTS</h3>
