--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    
     
     <br>
-    <p><font size ="4">HI I am MITHIL PRANAV R.S from MURUNGAPALAIYAM THIRUPPUR .I am a very optimistic person and a tech enthusiast</font></p>
+    <p><font size ="4">HI I am MITHIL PRANAV R.S from MURUNGAPALAIYAM THIRUPPUR .I am a  optimist and a tech enthusiast</font></p>
     <p>LINK TO :</p>
 <hr size = "5" noshade>
     <h3>SOCIAL MEDIA ACCOUNTS</h3>
