--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
     <title>Mithil pranav's homepage</title>
 </head>
-<body>
+<body style = "background-color:blue;">
     <table cellspacing="30">
         <tr>
             <td> <img src ="mithil.jpg" width ="200" height = "200" alt = "my photo"></td>
